# metal-cpp-cmake

./: .gitignore  CMakeLists.txt  README.md
metal-cmake/: CMakeLists.txt  defination.cpp  definition.cpp
src/: CMakeLists.txt  main.cpp
src/learn-metal/00-window/: 00-window.cpp
src/learn-metal/01-primitive/: 01-primitive.cpp
src/learn-metal/02-argbuffers/: 02-argbuffers.cpp
src/learn-metal/03-animation/: 03-animation.cpp
src/learn-metal/04-instancing/: 04-instancing.cpp
src/learn-metal/05-perspective/: 05-perspective.cpp
src/learn-metal/06-lighting/: 06-lighting.cpp
src/learn-metal/07-texturing/: 07-texturing.cpp
src/learn-metal/08-compute/: 08-compute.cpp
src/learn-metal/09-compute-to-render/: 09-compute-to-render.cpp
src/learn-metal/10-frame-debugging/: 10-frame-debugging.cpp  Info.plist
